[package]
name = "pbdbfixer"
version = "0.5.0"
authors = ["Martin Brodbeck <martin@brodbeck-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
quick-xml = "0.21"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]
