[package]
name = "pbdbfixer"
version = "0.8.3"
authors = ["Martin Brodbeck <martin@brodbeck-online.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
quick-xml = "0.23"

[dependencies.rusqlite]
version = "0.27"
features = ["bundled"]
